Add author names to spelling whitelist

--- a/vscode-settings.json5
+++ b/vscode-settings.json5
@@ -114,7 +114,9 @@
         "grpc",
         "infof",
         "jaeger",
+        "kandasamy",
         "kgobject",
+        "kroeker",
         "kube",
         "kubeconfig",
         "kubectl",
@@ -124,6 +126,7 @@
         "minikube",
         "oids",
         "oneof",
+        "ongaro",
         "parserish",
         "parsify",
         "pmap",
@@ -135,6 +138,7 @@
         "recvd",
         "repo",
         "rsync",
+        "sathish",
         "sparql",
         "stretchr",
         "structs",
